section0 and section1 css complete

--- a/index.html
+++ b/index.html
@@ -8,53 +8,53 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div>
-        <div>
-            <h2>Header Logo</h2>
-            <div>
+    <div class="section0">
+        <div class="header">
+            <h2 class="logo">Header Logo</h2>
+            <div class="links">
                 <h4>header link one</h4>
                 <h4>header link two</h4>
                 <h4>header link three</h4>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="inside-section0">
+            <div class="left-inside-section0">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext that foes here under the main title. 
-                    It's a saller font and the color is lower contrast.</p>
+                <p class="secondary-text">This website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast.</p>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="">
+            <img src="./roberto-nickson-bwIqQ5qQhXs-unsplash.jpg" alt="A man playing street-golf" id="street-golf">
         </div>
     </div>
-    <div>
+    <div class="section1">
         <h2>Some random information.</h2>
-        <div>
-            <div>
-                <img src="" alt="">
+        <div class="cards">
+            <div class="card-holder">
+                <img src="./WhatsApp Image 2021-06-15 at 10.57.50.jpeg" alt="" class="cards-img">
                 <p class="subtext">this is some substext under an illustration or image</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="card-holder">
+                <img src="./WhatsApp Image 2021-06-15 at 10.57.50.jpeg" alt="" class="cards-img">
                 <p class="subtext">this is some substext under an illustration or image</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="card-holder">
+                <img src="./WhatsApp Image 2021-06-15 at 10.57.50.jpeg" alt="" class="cards-img">
                 <p class="subtext">this is some substext under an illustration or image</p>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="card-holder">
+                <img src="./WhatsApp Image 2021-06-15 at 10.57.50.jpeg" alt="" class="cards-img">
                 <p class="subtext">this is some substext under an illustration or image</p>
             </div>
         </div>
     </div>
-    <div>
+    <div class="section2">
         <p class="quote">This is an ispiring quote, or a testimonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it. 
             Who knows? All I know is that is looks nice.</p>
         <p class="credit">-Thor, God of Thunder</p>
     </div>
-    <div>
+    <div class="section3">
         <div>
             <div>
                 <h3>Call to action! It's time!</h3>
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="footer">
         <p>Copyright © The Odin Project 2021</p>
     </div>
 </body>
