--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
         </div>
     </div>
     <div class="section2">
+        <div>
         <p class="quote">This is an ispiring quote, or a testimonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it. 
             Who knows? All I know is that is looks nice.</p>
         <p class="credit">-Thor, God of Thunder</p>
+        </div>
     </div>
     <div class="section3">
         <div>
