landing-page finished

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
     </div>
     <div class="section3">
-        <div>
-            <div>
+        <div class="card-section3">
+            <div class="content-section3">
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
